# rust-xmlsec

./: Cargo.toml  README.md
src/: c14n.rs  lib.rs
src/proto/: ds.rs
testdata/: c14n_1_test_input.xml  c14n_1_test_output.xml
