[package]
name = "rust-xmlsec"
version = "1.0.0"
edition = "2021"
authors = ["Q <q@as207960.net>"]
license = "MIT"
repository = "https://github.com/as207960/rust-xmlsec"
description = "Pure rust XMLSec implementation"
readme = "README.md"

[dependencies]
xml_serde = "1"
xml-rs = "0.8"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
pretty_env_logger = "0.4"
openssl = "0.10"
base64 = "0.13"
